# zap-stream-core

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  AGENTS.md  API.md  CHANGELOG.md  Cargo.toml  Dockerfile  PIPELINE_LOG_CHANGES.md  README.md  STREAM_INDEX_IMPLEMENTATION.md  TODO.md  config.toml  config.yaml  db.sql  docker-compose.yml  route96.toml  test.sh  test_low_balance.md  test_retry_mechanism.md
.github/workflows/: docker-build.yml  docker-pr.yml
crates/core/: Cargo.toml
crates/core-nostr/: Cargo.toml
crates/core-nostr/src/: blossom.rs  lib.rs  n94.rs
crates/core/dev-setup/: route96.toml
crates/core/src/: endpoint.rs  frame.rs  generator.rs  lib.rs  listen.rs  metrics.rs  reorder.rs  test_hls_timing.rs  viewer.rs
crates/core/src/egress/: hls.rs  mod.rs  moq.rs  muxer_egress.rs  recorder.rs  rtmp.rs
crates/core/src/ingress/: file.rs  mod.rs  pipeline.rs  rtmp.rs  srt.rs  tcp.rs  test.rs
crates/core/src/mux/: hls.rs  mod.rs
crates/core/src/mux/hls/: mod.rs  segment.rs  variant.rs
crates/core/src/overseer/: local.rs  mod.rs  webhook.rs
crates/core/src/pipeline/: config.rs  mod.rs  placeholder.rs  plugin.rs  runner.rs  worker.rs
crates/core/src/variant/: audio.rs  mapping.rs  mod.rs  video.rs
crates/migration-tool/: Cargo.toml  README.md
crates/migration-tool/src/: main.rs
crates/n94/: Cargo.toml  README.md
crates/n94-bridge/: Cargo.toml  Dockerfile  README.md
crates/n94-bridge/src/: cors.rs  main.rs
crates/n94/src/: main.rs
crates/zap-stream/: .dockerignore  Cargo.toml  Dockerfile  check_idr.sh  claude.md  config.yaml  docker-compose.yml  index.html  test.sh
crates/zap-stream-api-common/: Cargo.toml
crates/zap-stream-api-common/src/: api.rs  api_admin.rs  api_admin_axum.rs  api_axum.rs  game_db.rs  lib.rs  model.rs  model_admin.rs
crates/zap-stream-cf/: Cargo.toml  config.yaml
crates/zap-stream-cf/src/: api.rs  main.rs
crates/zap-stream-db/: Cargo.toml
crates/zap-stream-db/migrations/: 20241115120541_init.sql  20250714110145_audit_table.sql  20250904095845_add_node_name_to_user_streams.sql  20250910000000_add_stream_dump_recording_to_user.sql  20250917125619_add_nwc_to_user.sql  20250919101353_add_defualt_endpoints.sql  20251001100145_stream_key.sql  20260108000000_signed_payment_amount.sql  20260108120000_add_disabled_to_forward.sql  20260114100000_user_ingest_id.sql  20260115151245_external_ids.sql  20260115160000_user_stream_key_external_id.sql  20260120120000_add_input_uid_to_user_stream.sql  20260609000000_rename_external_id_add_input_id.sql
crates/zap-stream-db/src/: db.rs  model.rs
crates/zap-stream-db/tests/: stream_lifecycle.rs
crates/zap-stream-external/: Cargo.toml  Dockerfile  config.yaml
crates/zap-stream-external/src/: main.rs
crates/zap-stream-external/src/cloudflare/: api.rs  client.rs  mod.rs  types.rs
crates/zap-stream-external/tests/: .env.example  TESTING_README.md  e2e_custom_keys.rs  e2e_multi_user.rs  e2e_single_user.rs  relay_smoke_test.rs  smoke_account_uuid.rs  smoke_key_uuid.rs
crates/zap-stream-external/tests/common/: api_client.rs  config.rs  db.rs  docker.rs  ffmpeg.rs  mod.rs  nostr_relay.rs
crates/zap-stream/dev-setup/: db.sql  route96.yaml  strfry.conf
crates/zap-stream/src/: admin_api.rs  api.rs  api_base.rs  auth.rs  blossom.rs  endpoint.rs  game_db.rs  http.rs  http_old.rs  lib.rs  local_overseer.rs  main.rs  monitor.rs  multitrack.rs  nostr.rs  overseer.rs  payments.rs  settings.rs  stream_manager.rs  streaming_backend.rs  viewer.rs  websocket_metrics.rs
crates/zap-stream/src/backends/: mod.rs  rml_rtmp.rs
crates/zap-stream/src/backends/cloudflare/: client.rs  mod.rs  types.rs
crates/zap-stream/src/http/: hls.rs  index.html  mod.rs  multitrack.rs  range.rs  thumb.rs  zap.rs
crates/zap-stream/src/plugin/: mod.rs  track_id.rs
docs/: ADMIN_API.md  API.md  CLOUDFLARE_BACKEND.md  DEPLOYMENT.md  LOW_BALANCE_NOTIFICATIONS.md  MANUAL.md  VARIANTS.md  config_example.md  docker-compose.yaml  pipeline-log-api.md
docs/deploy/: compose-config.yaml  docker-compose.external.yaml  docker-compose.yaml
docs/examples/: README.md  pipeline-log-client.html
migrations/: 20241115120541_init.sql
notes/: Cloudflare-Live-Stream-API-docs.md  ai-in-ide-workflow.md  ai-zap-stream-core-strategies.md  cloudflare-integration-test-plan.md
scripts/: E2E_TESTING.md  README.md  TESTING_README.md  cloudflare-api-discovery.sh  decode_npub.js  package-lock.json  package.json  query_nostr_events_auth.js  sign_nip98.js  test-cloudflare-e2e.sh  test-cloudflare-integration.sh  test-cloudflare-multi-user-e2e.sh  test-cloudflare-stream-only.sh  test-cloudflare-viewer-count.sh  test-custom-keys-e2e.sh  test-external-custom-keys-e2e.sh  test-external-e2e.sh  test-external-multi-user-e2e.sh  test-hls-discovery.sh  test-rml-custom-keys.sh  test-srt-ingest.sh  test-zap-stream-api-endpoints.sh
src/: blossom.rs  fraction.rs  http.rs  index.html  ipc.rs  lib.rs  main.rs  settings.rs  tag_frame.rs  utils.rs  variant.rs  webhook.rs
src/background/: monitor.rs
src/decode/: mod.rs
src/demux/: info.rs  mod.rs
src/egress/: hls.rs  http.rs  mod.rs  mpegts.rs  recorder.rs
src/encode/: audio.rs  mod.rs  video.rs
src/ingress/: file.rs  mod.rs  rtmp.rs  srt.rs  tcp.rs  test.rs
src/mux/: hls.rs  mod.rs
src/overseer/: local.rs  mod.rs  webhook.rs  zap_stream.rs
src/overseer/zap_stream/: db.rs  mod.rs
src/pipeline/: builder.rs  mod.rs  runner.rs
src/scale/: mod.rs
src/variant/: audio.rs  mapping.rs  mod.rs  video.rs
zap-stream-db/: Cargo.toml
zap-stream-db/migrations/: 20241115120541_init.sql
zap-stream-db/src/: db.rs  lib.rs  model.rs
