[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/zap-stream",
    "crates/zap-stream-db"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"

[workspace.dependencies]
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "056f30c5f9784e5765394469f0d6bef827284b98" }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { version = "^1.0.91", features = ["backtrace"] }
async-trait = "0.1.77"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
url = "2.5.0"
itertools = "0.14.0"
chrono = { version = "^0.4.38", features = ["serde"] }
hex = "0.4.3"
m3u8-rs = { git = "https://git.v0l.io/Kieran/m3u8-rs.git", rev = "5b7aa0c65994b5ab2780b7ed27d84c03bc32d19f" }
sha2 = "0.10.8"
data-encoding = "2.9.0"