[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
edition = "2024"
rust-version = "1.88"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"

[workspace.dependencies]
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "3395f9fadd0a8e9498e7d6bfcf0c03bb7bc51e79" }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7.13"
anyhow = { version = "^1.0.91", features = ["backtrace"] }
async-trait = "0.1.77"
tracing = "0.1.41"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
url = "2.5.0"
itertools = "0.14.0"
chrono = { version = "^0.4.38", features = ["serde"] }
hex = "0.4.3"
m3u8-rs = { git = "https://git.v0l.io/Kieran/m3u8-rs.git", rev = "6803eefca2838a8bfae9e19fd516ef36d7d89997" }
sha2 = "0.10.8"
data-encoding = "2.9.0"
rand = "0.9.1"
pretty_env_logger = "0.5.0"
nostr-sdk = { version = "0.43.0", features = ["nip57"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
