[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"

[workspace.dependencies]
ffmpeg-rs-raw = { git = "https://git.v0l.io/Kieran/ffmpeg-rs-raw.git", rev = "c5f3424b74005c75f6f3950f4e59dc05df23718e" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log", "fmt"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
url = "2"
itertools = "0.14"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
m3u8-rs = { git = "https://git.v0l.io/Kieran/m3u8-rs.git", rev = "6803eefca2838a8bfae9e19fd516ef36d7d89997" }
sha2 = "0.10"
data-encoding = "2.9"
rand = "0.9"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", pacakge = "nostr-sdk", rev = "f14d869dd85e3355c756cc4fa355fd8c8318c642", features = ["nip57", "nip47"] }
ctrlc = { version = "3.4", features = ["termination"] }
