[package]
name = "zap-stream-core-nostr"
description = "Nostr shared logic for zap-stream-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
url.workspace = true
hex.workspace = true
log.workspace = true

reqwest = { version = "0.12.20", features = ["stream", "json", "http2", "default-tls"], default-features = false }
base64 = { version = "0.22.1" }
nostr-sdk = { version = "0.42.0" }