[package]
name = "zap-stream-core-nostr"
description = "Nostr shared logic for zap-stream-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sha2.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
url.workspace = true
hex.workspace = true
tracing.workspace = true
nostr-sdk.workspace = true

reqwest = { version = "0.13", features = ["stream", "json", "http2", "default-tls"], default-features = false }
base64 = { version = "0.22" }
rand = { version = "0.9" }
futures = { version = "0.3" }