[package]
name = "zap-stream-core"
version = "0.1.0"
edition.workspace = true

[features]
default = ["ingress-srt", "ingress-rtmp", "ingress-test"]
ingress-srt = ["dep:srt-tokio"]
ingress-rtmp = ["dep:rml_rtmp", "dep:xflv", "dep:bytes"]
ingress-test = []
ingress-tcp = []
egress-rtmp = ["dep:rml_rtmp", "dep:xflv", "dep:bytes"]

[dependencies]
ffmpeg-rs-raw.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
uuid.workspace = true
serde.workspace = true
hex.workspace = true
itertools.workspace = true
m3u8-rs.workspace = true
sha2.workspace = true
url.workspace = true

futures-util = "0.3.30"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
fontdue = "0.9.2"
ringbuf = "0.4.7"
libc = "0.2.175"

# srt
srt-tokio = { version = "0.4.4", optional = true }

# rtmp
rml_rtmp = { version = "0.8.0", optional = true }
bytes = { version = "1.9.0", optional = true }
xflv = { version = "0.4.4", optional = true }

[dev-dependencies]
tempfile = "3.8.1"
pretty_env_logger.workspace = true

