[package]
name = "zap-stream-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
ingress-srt = ["dep:srt-tokio"]
ingress-rtmp = ["dep:rml_rtmp", "dep:xflv", "dep:bytes"]
ingress-test = []
ingress-tcp = []
egress-rtmp = ["dep:rml_rtmp", "dep:xflv", "dep:bytes"]
egress-moq = ["dep:hang"]

[dependencies]
ffmpeg-rs-raw.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
hex.workspace = true
itertools.workspace = true
m3u8-rs.workspace = true
sha2.workspace = true
url.workspace = true

futures-util = "0.3.30"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
fontdue = "0.9.2"
ringbuf = "0.4.7"
libc = "0.2.175"
tracing-appender = "0.2.3"
chrono = "0.4.42"

# srt
srt-tokio = { version = "0.4.4", optional = true }

# rtmp
rml_rtmp = { version = "0.8.0", optional = true }
bytes = { version = "1.9.0", optional = true }
xflv = { version = "0.4.4", optional = true }

# moq
hang = { git = "https://github.com/kixelated/moq.git", rev = "b2abf685647f125486cbb40b44e1134f947c6583", optional = true }

[dev-dependencies]
tempfile = "3.8.1"

