[package]
name = "zap-stream-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
pipeline = []
ingress-srt = ["dep:srt-tokio"]
ingress-rtmp = ["dep:rml_rtmp", "dep:xflv", "dep:bytes"]
ingress-test = []
ingress-tcp = []
egress-moq = ["dep:hang"]
egress-hls = ["dep:m3u8-rs"]
debug-hls = ["egress-hls"]

[dependencies]
ffmpeg-rs-raw.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde.workspace = true
hex.workspace = true
itertools.workspace = true
sha2.workspace = true
url.workspace = true
chrono.workspace = true

futures-util = "0.3"
resvg = "0.46"
usvg = "0.46"
tiny-skia = "0.11"
fontdue = "0.9"
ringbuf = "0.4"
libc = "0.2"
tracing-appender = "0.2"
prometheus = "0.14"

# hls
m3u8-rs = { workspace = true, optional = true }

# srt
srt-tokio = { version = "0.4.4", optional = true }

# rtmp
rml_rtmp = { version = "0.8.0", optional = true }
bytes = { version = "1.9.0", optional = true }
xflv = { version = "0.4.4", optional = true }

# moq
hang = { git = "https://github.com/kixelated/moq.git", optional = true }

[dev-dependencies]
tempfile = "3.8.1"

