[package]
name = "migration-tool"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }