[package]
name = "n94"
description = "Standalone NIP-53 broadcaster"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zap-stream-core = { path = "../core", default-features = false }
zap-stream-core-nostr = { path = "../core-nostr", default-features = false }

uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
nostr-sdk.workspace = true
chrono.workspace = true
ctrlc.workspace = true

clap = { version = "4.5.16", features = ["derive"] }