[package]
name = "zap-stream"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["srt", "rtmp", "test-pattern", "zap-stream"]
zap-stream = ["dep:payments-rs", "dep:lnurl-rs"]
srt = ["zap-stream-core/ingress-srt"]
rtmp = ["zap-stream-core/ingress-rtmp"]
test-pattern = ["zap-stream-db/test-pattern", "zap-stream-core/ingress-test"]
withdrawal = []

[dependencies]
zap-stream-db = { path = "../zap-stream-db" }
zap-stream-core = { path = "../core" }
zap-stream-core-nostr = { path = "../core-nostr" }

uuid.workspace = true
ffmpeg-rs-raw.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
chrono.workspace = true
hex.workspace = true
url.workspace = true
m3u8-rs.workspace = true
data-encoding.workspace = true
sha2.workspace = true
nostr-sdk.workspace = true
ctrlc.workspace = true

# http stuff
hyper = { version = "1.5.1", features = ["server", "http1", "http2"] }
bytes = "1.8.0"
http-body-util = "0.1.2"
hyper-util = "0.1.10"

# websocket stuff
tungstenite = "0.27.0"
hyper-tungstenite = "0.18.0"

# direct deps
config = { version = "0.15.6", features = ["yaml"] }
payments-rs = { git = "https://github.com/v0l/payments-rs", rev = "414adc2186a163e6684f9451d95377dd5d07a015", optional = true, default-features = false, features = ["method-lnd", "method-bitvora"] }
base64 = { version = "0.22.1" }
clap = { version = "4.5.16", features = ["derive"] }
futures-util = "0.3.31"
matchit = "0.8.4"
mustache = "0.9.0"
http-range-header = "0.4.2"
sysinfo = "0.36.1"
lnurl-rs = { git = "https://github.com/benthecarman/lnurl-rs", optional = true, default-features = false, rev = "745aea89c404f14d8adc18b594ac002d9cab9b49", features = ["async"] }
redis = { version = "0.32.5", features = ["cluster", "tokio-comp", "tokio-native-tls-comp"] }
libc = "0.2.175"
nwc = { version = "0.43.0" }
tokio-stream = "0.1.17"

# Migration dependencies
tiberius = "0.12.3"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
log = "0.4.28"
