[package]
name = "zap-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["rtmp", "hls", "test-pattern", "moq", "tls-ring"]
pipeline = ["zap-stream-core/pipeline"]
srt = ["pipeline", "zap-stream-core/ingress-srt"]
rtmp = ["pipeline", "zap-stream-core/ingress-rtmp"]
hls = ["pipeline", "zap-stream-core/egress-hls"]
moq = ["pipeline", "zap-stream-core/egress-moq", "dep:moq-native"]
test-pattern = ["pipeline", "zap-stream-db/test-pattern", "zap-stream-core/ingress-test"]
withdrawal = []

tls-ring = ["payments-rs/tls-ring", "redis/tokio-rustls-comp", "moq-native/ring"]
tls-aws-lc-rs = ["payments-rs/tls-aws", "redis/tokio-rustls-comp", "moq-native/aws-lc-rs"]

[[bin]]
path = "src/main.rs"
name = "zap-stream"
required-features = ["pipeline"]

[dependencies]
zap-stream-db = { path = "../zap-stream-db", default-features = false }
zap-stream-core = { path = "../core", default-features = false }
zap-stream-core-nostr = { path = "../core-nostr", default-features = false }
zap-stream-api-common = { path = "../zap-stream-api-common", default-features = false, features = ["axum", "admin"] }

uuid.workspace = true
ffmpeg-rs-raw.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
url.workspace = true
m3u8-rs.workspace = true
data-encoding.workspace = true
sha2.workspace = true
nostr-sdk.workspace = true
ctrlc.workspace = true

# http stuff
axum.workspace = true
axum-extra = { version = "0.12", features = ["file-stream"] }

#moq
moq-native = { git = "https://github.com/kixelated/moq.git", rev = "b2abf685647f125486cbb40b44e1134f947c6583", optional = true, default-features = false }

# direct deps
config = { version = "0.15.6", features = ["yaml"] }
payments-rs = { git = "https://github.com/v0l/payments-rs.git", rev = "da7c7f5c4f2566b2a33d6c0c40db5cbeed7517ee", default-features = false, features = ["method-lnd", "method-bitvora"] }
clap = { version = "4.5.16", features = ["derive"] }
futures-util = "0.3.31"
mustache = "0.9.0"
http-range-header = "0.4.2"
sysinfo = "0.36"
lnurl-rs = { git = "https://github.com/benthecarman/lnurl-rs", default-features = false, rev = "745aea89c404f14d8adc18b594ac002d9cab9b49", features = ["async"] }
redis = { version = "0.32.5", features = ["cluster", "tokio-comp"] }
libc = "0.2.175"
nwc = { git = "https://github.com/rust-nostr/nostr.git", pacakge = "nwc", rev = "f14d869dd85e3355c756cc4fa355fd8c8318c642" }
tokio-stream = "0.1.17"
